<resources>
    <string name="app_name">Expense Manager</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_menu_today">Today</string>
    <string name="bottom_menu_week">Week</string>
    <string name="bottom_menu_month">Month</string>
    <string name="nav_menu_expenses">Expenses</string>
    <string name="nav_menu_all_expenses">All Expenses</string>
    <string name="nav_menu_budget">Budgeting</string>
    <string name="nav_menu_categories">Categories</string>
    <string name="nav_menu_payment_methods">Payment Methods</string>
    <string name="nav_menu_log">Log</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="currency_picker_title">Currency</string>
    <string name="payment_method_picker_title">Payment Method</string>
    <string name="category_picker_title">Category</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>
    <string name="detail_activity_edit_description_hint">Description</string>
    <string name="detail_activity_edit_amount_hint">Amount</string>
    <string name="detail_activity_edit_store_hint">Additional Info</string>
    <string name="category_deleted">Category Deleted</string>
    <string name="payment_deleted">Payment Method Deleted</string>
    <string name="undo">UNDO</string>
    <string name="add_new">Add New</string>
    <string name="edit">Edit</string>
    <string name="shortcut_add_expense_short_label">Add Expense</string>
    <string name="shortcut_add_expense_long_label">Add Expense</string>

    <string name="all_expenses_search">FIND</string>

    <string name="account_access_permission_text">"To backup your data to Google Sheets, this app needs to access your Google account (via Contacts)."</string>
    <string name="connect_account">Connect Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_key_spreadsheet_id">spreadsheet_id</string>
    <string name="preference_key_sheets_id">sheets_id</string>
    <string name="preference_key_backup_now">backup_now</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
