<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_expenses"
            android:checked="true"
            android:icon="@drawable/ic_expenses"
            android:title="@string/nav_menu_expenses" />

        <item
            android:id="@+id/nav_all_expenses"
            android:icon="@drawable/ic_all_expenses"
            android:title="@string/nav_menu_all_expenses" />

        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_budget"
            android:title="@string/nav_menu_budget" />

        <item
            android:id="@+id/nav_payment_methods"
            android:icon="@drawable/ic_expense_payment_method"
            android:title="@string/nav_menu_payment_methods" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/nav_menu_categories" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_menu_settings" />
    </group>

    <group>
        <item
            android:id="@+id/nav_sync"
            android:title="Sync and Delete"/>
    </group>

</menu>
