<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Google Sheets"
        android:key="sync_category">

        <EditTextPreference
            android:key="@string/preference_key_spreadsheet_id"
            android:title="Spreadsheet ID"
            android:summary="Enter Spreadsheet ID"
            android:dialogTitle="Spreadsheet ID"
            android:dialogMessage="Enter ID"/>

        <EditTextPreference
            android:key="@string/preference_key_sheets_id"
            android:title="Current Sheet ID"
            android:summary="Enter ID for sheet, expenses would go in"
            android:dialogTitle="Sheet ID"
            android:dialogMessage="Enter ID"
            android:inputType="text|number"/>

        <Preference
            android:key="@string/preference_key_backup_now"
            android:title="Backup Now"
            android:summary="Last backup at -.- "
            />

    </PreferenceCategory>

</PreferenceScreen>
